# ProjecteWeb

./: .gitignore  ProjecteWeb.code-workspace  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
DjangoProject1/: .dockerignore  .env.example  Dockerfile  hola.txt  pyproject.toml  random_players.txt  start.sh  tailwind.config.js
DjangoProject1/DjangoProject1/: settings.py  urls.py
DjangoProject1/banners/: djangobanner.sh
DjangoProject1/db/: db.sqlite3
DjangoProject1/features/: draft_management.feature  environment.py
DjangoProject1/features/steps/: draft_steps.py
DjangoProject1/myapp/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
DjangoProject1/myapp/management/commands/: sync_players.py  sync_teams.py
DjangoProject1/myapp/migrations/: 0001_initial.py  0002_futdraft_player_order_alter_futdraft_id_and_more.py  0003_players_pressure.py  0004_rename_age_group_players_age_group_and_more.py  0005_alter_profile_image_alter_profile_user.py
DjangoProject1/static/css/: output.css
DjangoProject1/templates/: base.html
DjangoProject1/templates/components/: button.html  player_card.html
DjangoProject1/templates/myapp/: draft_detail.html  game.html  home.html  login.html  my_drafts.html  player_detail.html  players.html  profile.html  register.html  team_detail.html  teams.html
FastAPIProject/: pyproject.toml
api/: Dockerfile  README.md  pyproject.toml  utils.py
api/banners/: apibanner.sh
