[project]
name = "djangoproject1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "cloudinary>=1.44.2",
    "django>=6.0.3",
    "django-cloudinary-storage>=0.3.0",
    "pillow>=12.2.0",
    "python-decouple>=3.8",
    "uvicorn>=0.41.0",
]
